# cortex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHASES.md  README.md  generate_sweep.py
.github/workflows/: ci.yml
docs/: API.md  LESSONS.md  NEUROSCIENCE.md
docs/superpowers/plans/: 2026-03-25-cortex-language-decoder.md  2026-03-29-brain-grounded-companion.md  2026-03-29-hope-phase2-finetune.md  2026-03-29-turboquant-embedding-quantization.md  2026-04-06-cortex-ui-redesign.md  2026-04-06-multi-topic-cross-domain-reasoning.md  2026-04-06-spiking-recall-resurrection.md  2026-04-06-synaptic-knowledge-imprinting.md  2026-04-06-temporal-sequence-learning.md
docs/superpowers/specs/: 2026-03-29-brain-grounded-companion-design.md  2026-03-29-hope-phase2-finetune-design.md  2026-03-29-turboquant-embedding-quantization-design.md  2026-04-06-cortex-ui-redesign.md  2026-04-06-multi-topic-cross-domain-reasoning-design.md  2026-04-06-spiking-recall-resurrection-design.md  2026-04-06-synaptic-knowledge-imprinting-design.md  2026-04-06-temporal-sequence-learning-design.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/brain-cognition/: Cargo.toml
rust/crates/brain-cognition/src/: autonomy.rs  brain_state.rs  companion.rs  concepts.rs  config.rs  dreams.rs  fast_memory.rs  grid_cells.rs  lib.rs  memory_db.rs  personal.rs  personal_memory.rs  search.rs  sse.rs  state.rs  working_memory.rs
rust/crates/brain-cognition/src/sql/: schema.sql
rust/crates/brain-cognition/tests/: companion_scenarios.rs
rust/crates/brain-core/: Cargo.toml  build.rs
rust/crates/brain-core/src/: association_network.rs  hebbian.rs  lib.rs  metrics.rs  replay_buffer.rs  scheduler.rs  sparse_projection.rs  temporal_trace.rs
rust/crates/brain-db/: Cargo.toml
rust/crates/brain-db/src/: knowledge_base.rs  lib.rs  models.rs
rust/crates/brain-experiment/: Cargo.toml
rust/crates/brain-experiment/src/: config.rs  cortex.rs  dynamic_loader.rs  embed_cache.rs  lib.rs  mutated_runner.rs  mutations.rs  ollama.rs  runner.rs  scoring.rs
rust/crates/brain-inference/: Cargo.toml
rust/crates/brain-inference/src/: audio.rs  companion_decoder.rs  emotion.rs  faces.rs  lib.rs  mel.rs  mlp.rs  quantized_index.rs  text.rs  torchscript.rs  vad.rs  visual.rs
rust/crates/brain-inference/tests/: companion_decoder_test.rs
rust/crates/brain-server/: Cargo.toml
rust/crates/brain-server/src/: app.rs  lib.rs  main.rs  resources.rs  routes.rs  sse.rs  state.rs
rust/crates/brain-spiking/: Cargo.toml
rust/crates/brain-spiking/src/: concepts.rs  config.rs  gpu.rs  knowledge.rs  lib.rs  network.rs  neuromodulation.rs  neuron.rs  plasticity.rs  region.rs  sleep.rs  spike_decoder.rs  spike_encoder.rs  structural.rs  synapse.rs  synapse_mmap.rs
rust/crates/brain-spiking/src/regions/: amygdala.rs  association.rs  auditory.rs  brainstem.rs  cerebellum.rs  full_brain.rs  hippocampus.rs  mod.rs  motor.rs  predictive.rs  prefrontal.rs  visual.rs
rust/crates/brain-spiking/tests/: encoder_test.rs  full_brain_test.rs  integration_test.rs  knowledge_test.rs  mmap_test.rs  network_test.rs  neuron_test.rs  plasticity_test.rs  region_test.rs  structural_test.rs  synapse_test.rs
rust/crates/brain-traits/: Cargo.toml
rust/crates/brain-traits/src/: lib.rs
rust/crates/mutation-template/: Cargo.toml  Cargo.toml.template
rust/crates/mutation-template/src/: lib.rs  lib.rs.template
scripts/: backup_brain.sh  benchmark_learning.sh  build_audioset_expansion.py  build_causal_graph.py  build_companion_vocab.py  build_concept_hierarchy.py  download_audiocaps.py  download_audioset.py  download_freesound.py  download_fsd50k.py  download_open_images.py  download_wavcaps.py  encode_context.py  eval_companion_decoder.py  expand_embeddings.py  export_companion_grounded.py  export_perception_models.py  export_text_encoder.py  export_to_onnx.py  export_torchscript.py  extract_all_features.py  extract_emotions.py  generate_companion_data.py  generate_emotion_table.py  process_audioset.py  retrain_audioset_adapter.py  train_brain_decoder.py  train_companion_decoder.py  train_companion_grounded.py  train_hope_companion.py  train_self_model.py  train_temporal_model.py  train_text_grounding.py  train_v5_mlp.py  train_v6_audioset.py  train_world_model.py  youtube_brain.py
scripts/brain/: config.py  db.py
scripts/tests/: test_build_companion_vocab.py  test_companion_decoder.py  test_encode_context.py  test_generate_companion_data.py  test_hope_companion.py
static/: cortex.css  cortex.js
templates/: base.html  brain.html  chat.html  cognition.html  dashboard.html  evolution.html  experiments.html  explore.html  face.html  goals.html  imagine.html  index.html  interact.html  listen.html  spiking.html  training.html  watch.html  youtube.html
tests/: conftest.py  test_api.py  test_companion.py  test_core.py
