[workspace]
members = [
    "crates/brain-core",
    "crates/brain-traits",
    "crates/brain-experiment",
    "crates/brain-server",
    "crates/brain-db",
    "crates/brain-inference",
    "crates/brain-cognition",
    "crates/mutation-template",
    "crates/brain-spiking",
]
resolver = "2"

[workspace.dependencies]
ndarray = { version = "0.16" }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "static"] }
cblas-sys = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
libloading = "0.8"
tera = "1"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }
safetensors = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
sysinfo = "0.33"
async-stream = "0.3"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
image = "0.25"
base64 = "0.22"
rustfft = "6"
