[package]
name = "brain-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { workspace = true }
blas-src = { workspace = true }
openblas-src = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = "0.5"
